--- a/src/2-snackbar.html
+++ b/src/2-snackbar.html
@@ -4,27 +4,29 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Page 3</title>
+    <title>Snackbar</title>
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
 
     <form class="form">
-      <label>
+      <label class="delay">
         Delay (ms)
         <input type="number" name="delay" required />
       </label>
     
-      <fieldset>
+      <fieldset class="fieldset">
         <legend>State</legend>
-        <label>
+        <div class="fildset-container">
+        <label class="label-fildset">
           <input type="radio" name="state" value="fulfilled" required />
           Fulfilled
         </label>
-        <label>
+        <label class="label-fildset">
           <input type="radio" name="state" value="rejected" required />
           Rejected
         </label>
+      </div>
       </fieldset>
     
       <button type="submit">Create notification</button>
